Wed Jan  2 23:30:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/decompress.c (decompress_zlib), lib/linelength.c
	  (get_line_length), lib/pipeline.c (passthrough), src/lexgrog.l
	  (find_name), src/man.c (set_term, get_term, main,
	  make_roff_command, format_display_and_save, format_display,
	  display_catman, display), src/manconv.c (main), src/zsoelim.l
	  (open_file): Use STDIN_FILENO, STDOUT_FILENO, and STDERR_FILENO
	  macros rather than calling fileno.

Wed Jan  2 16:46:46 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
	  (main), src/lexgrog_test.c (main), src/man.c (main), src/manconv.c
	  (main), src/mandb.c (main), src/manpath.c (main), src/whatis.c
	  (main), src/wrapper.c (main), src/zsoelim.l (main): Bind the
	  "man-db-gnulib" textual domain as well as "man-db".

Wed Jan  2 00:12:48 GMT 2008  Benno Schulenberg  <benno@vertaalt.nl>

	* po/nl.po: New from Translation Project.
	* po/LINGUAS: Add nl.
	* man/THANKS: Add translator credit.

Tue Jan  1 15:36:23 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* README, src/man.c: Update copyright years.

Tue Jan  1 15:27:51 GMT 2008  Ming Hua  <minghua-guest@users.alioth.debian.org>

	* po/zh_CN.po: Update.

Tue Jan  1 12:34:10 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Add -s as an alias for -S (Debian bug
	  #458499).
	  (parse_opt): Accept it.
	  (get_section_list): Allow the section list to be separated by
	  commas as well as colons.
	* man/man1/man.man1 (OPTIONS): Document -s and comma-separation.
	* docs/NEWS: Document this.

Mon Dec 31 22:13:00 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Coding style): Expand.

Mon Dec 31 22:01:35 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Remove obsolete definitions of VERSION and
	  DATE and declaration of ver.
	* src/zsoelim.l: Remove obsolete definition of STATIC_VER.
