@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt glob lock memcmp minmax mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
