@@ -15,11 +15,11 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt glob lock memcmp minmax mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup xvasprintf
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --po-base=gnulib/po --doc-base=doc --aux-dir=tools --no-libtool --macro-prefix=gl --po-domain=man-db argp atexit canonicalize dirname error fnmatch-gnu getopt glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup xvasprintf
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_LOCAL_DIR([])
-gl_MODULES([argp atexit canonicalize dirname error fnmatch-gnu getopt glob lock memcmp minmax mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup xvasprintf])
+gl_MODULES([argp atexit canonicalize dirname error fnmatch-gnu getopt glob lib-ignore lock memcmp minmax mkdtemp mkstemp regex rename setenv strcspn strerror strsep sys_select xalloc xgetcwd xstrndup xvasprintf])
 gl_AVOID([])
 gl_SOURCE_BASE([gnulib/lib])
 gl_M4_BASE([gnulib/m4])
