@@ -1,3 +1,8 @@
+Thu Jan  3 21:39:27 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib: Import the lib-ignore module, to have the linker ignore
+	  unused libraries.
+
 Wed Jan  2 23:30:33 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* lib/decompress.c (decompress_zlib), lib/linelength.c
